apps/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: "ghcr.io/kstacks-org/auth-service:prod-4b1a20c"
          ports:
            - containerPort: 1867
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: 1500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /auth/actuator/health/liveness
              port: 1867
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /auth/actuator/health/readiness
              port: 1867
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
